# IM-Fuse

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  PUBLIC_REPO_MANIFEST.md  README.md  environment.yml  pyproject.toml
configs/: m3fuse_voltage.yaml  publication.yaml
data/: LICENSE  README.md  checksums.sha256
data/labels/: labels_keep_last.csv
data/sample_order/: sample_order_keep_last.csv
docs/: architecture.md  data_and_code_availability.md  data_manifest.md  data_preparation.md  explanation_faithfulness.md  extend.md  framework.md  publication_results.md  reproduce.md  reproducibility.md
scripts/: rebuild_anion_holdout_metrics_from_predictions.py  reproduce_publication.sh  run_final_publication_gpu.sh  run_ood_publication.sh
src/battery_fusion/: __init__.py  cli.py  paths.py  release_check.py
src/battery_fusion/data/: __init__.py  foundation.py  preprocess.py  splits.py
src/battery_fusion/experiments/: __init__.py  alignn_pretrained_baseline.py  alignn_pretrained_featurize.py  anion_holdout.py  cell_reports_figures.py  chemistry_splits.py  classical_baselines.py  final_publication_tables.py  modality_dropout.py  ood_splits.py  parity_plots.py  publication.py  publication_figures.py  subgroups.py
src/battery_fusion/explain/: __init__.py  composition_importance.py  context.py  deletion_curves.py  faithfulness.py  fusion_importance.py  (+6 more)
tests/: README.md  test_chemistry_groups.py  test_chemistry_splits.py  test_classical_baselines.py  test_data_foundation.py  test_explain_context.py  test_explanation_faithfulness.py  test_feature_builders.py  test_fusion_dataset.py  test_models.py  test_ood_splits.py  test_permutation_importance.py  test_preprocess.py  test_publication_modality_dropout.py  test_release_check.py  test_structure_atom_ablation.py  test_subgroup_metrics.py  test_target_transform.py  test_training.py
(+86 files in other folders)
